--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "diagnaltask",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://AnilShivamurthy.github.io/diagnaltask",
   "dependencies": {
     "@material-ui/core": "4.11.4",
     "@testing-library/jest-dom": "5.14.1",
@@ -21,7 +22,9 @@
     "build": "npm run watch:css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css"
+    "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +46,7 @@
   },
   "devDependencies": {
     "autoprefixer": "10.2.6",
+    "gh-pages": "3.2.3",
     "postcss-cli": "8.3.1",
     "tailwindcss": "2.2.4"
   }
